finished function to extract each part of pdf, updated readme

--- a/03_function_builder.ipynb
+++ b/03_function_builder.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af0e879b",
+   "id": "54d908a0",
    "metadata": {},
    "source": [
     "> Creating function that loops through list of pdf file paths and stores the text of those files"
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b286cbd4",
+   "id": "56a27a71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48cbec03",
+   "id": "b5151d1e",
    "metadata": {},
    "source": [
     "## Text Extraction Function"
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "4849f8a0",
+   "id": "27f32d7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "3fba2229",
+   "id": "6c7f9d41",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3d0551f",
+   "id": "f654dce5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa4d8233",
+   "id": "52649a59",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce602939",
+   "id": "ca252f2c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ac31705a",
+   "id": "1bcf42d1",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "485272c8",
+   "id": "c80103ef",
    "metadata": {
     "scrolled": true
    },
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "a97feca5",
+   "id": "dd2f3073",
    "metadata": {
     "scrolled": false
    },
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "31d66b93",
+   "id": "93f5de45",
    "metadata": {},
    "outputs": [
     {
@@ -568,8 +568,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "id": "2998643d",
+   "execution_count": 273,
+   "id": "51c9e4a9",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,19 @@
       "Meter read date: \t\t2022-08-23\n",
       "Current meter reading: \t\t78953\n",
       "Consumption: \t\t\t1164\n",
+      "Base Rate: \t\t\t0.07188\n",
+      "Consumption Charge: \t\t83.66832\n",
       "Peak consumption for all 12mos: 564\n",
+      "Actual Peak Consumption: \t564\n",
+      "Peak Rate: \t\t\t0.0206\n",
+      "Peak Charge for all 12mos: \t11.6184\n",
+      "Actual Peak Charge: \t\t11.6184\n",
+      "Fuel Rate: \t\t\t0.03835\n",
+      "Fuel Charge: \t\t\t44.6394\n",
+      "Regulatory Rate: \t\t0.01278\n",
+      "Regulatory Charge: \t\t14.875919999999999\n",
+      "Service Availability Charge: \t9.1\n",
+      "Total Bill: \t\t\t163.90204\n",
       "\n",
       "Parsed Bill Start: \t\t2022-08-24\n",
       "Parsed Bill End: \t\t2022-09-23\n",
@@ -590,7 +602,19 @@
       "Meter read date: \t\t2022-09-23\n",
       "Current meter reading: \t\t79963\n",
       "Consumption: \t\t\t1010\n",
+      "Base Rate: \t\t\t0.07188\n",
+      "Consumption Charge: \t\t72.5988\n",
       "Peak consumption for all 12mos: 410\n",
+      "Actual Peak Consumption: \t410\n",
+      "Peak Rate: \t\t\t0.0206\n",
+      "Peak Charge for all 12mos: \t8.446\n",
+      "Actual Peak Charge: \t\t8.446\n",
+      "Fuel Rate: \t\t\t0.03654\n",
+      "Fuel Charge: \t\t\t36.9054\n",
+      "Regulatory Rate: \t\t0.01278\n",
+      "Regulatory Charge: \t\t12.9078\n",
+      "Service Availability Charge: \t9.1\n",
+      "Total Bill: \t\t\t139.958\n",
       "\n"
      ]
     }
@@ -600,19 +624,19 @@
     "for text in df.text:\n",
     "    \n",
     "    # extacting raw billing period\n",
-    "    test_dateData = extract_text(text, 'Billing Period ', '\\nYour next')\n",
-    "#     print(f'Parsed Bill Period: {test_dateData}')\n",
+    "    date_data = extract_text(text, 'Billing Period ', '\\nYour next')\n",
+    "#     print(f'Parsed Bill Period: {date_data}')\n",
     "    \n",
     "    # extracting bill start\n",
-    "#     bill_start = ''.join(re.findall(r'^[a-zA-Z0-9\\s]+[\\s\\s]+[0-9?\\s,0-9]+', test_dateData))\n",
-    "    bill_start = test_dateData.split('-')[0].strip()\n",
+    "#     bill_start = ''.join(re.findall(r'^[a-zA-Z0-9\\s]+[\\s\\s]+[0-9?\\s,0-9]+', date_data))\n",
+    "    bill_start = date_data.split('-')[0].strip()\n",
     "    # formatting date\n",
     "    bill_start = arrow.get(bill_start, 'MMM DD, YYYY').format('YYYY-MM-DD')\n",
     "    print(f'Parsed Bill Start: \\t\\t{bill_start}')\n",
     "    \n",
     "    # extracting bill end\n",
-    "#     bill_end = ''.join(re.findall(r'-[a-zA-Z0-9\\s]+[\\s\\s]+[0-9?\\s,0-9]+', test_dateData))\n",
-    "    bill_end = test_dateData.split('-')[1].strip()\n",
+    "#     bill_end = ''.join(re.findall(r'-[a-zA-Z0-9\\s]+[\\s\\s]+[0-9?\\s,0-9]+', date_data))\n",
+    "    bill_end = date_data.split('-')[1].strip()\n",
     "    # formatting date\n",
     "    bill_end = arrow.get(bill_end, 'MMM DD, YYYY').format('YYYY-MM-DD')\n",
     "    print(f'Parsed Bill End: \\t\\t{bill_end}')\n",
@@ -634,9 +658,34 @@
     "    \n",
     "    consumption = int(list_[2])\n",
     "    print(f'Consumption: \\t\\t\\t{consumption}')\n",
+    "    base_rate = float(extract_text(text, 'Energy Charge ', '\\n$').split()[3][1:])\n",
+    "    print(f'Base Rate: \\t\\t\\t{base_rate}') \n",
+    "    consumption_chg = base_rate * consumption\n",
+    "    print(f'Consumption Charge: \\t\\t{consumption_chg}')\n",
     "    \n",
     "    peak_all = int(consumption - 600)\n",
     "    print(f'Peak consumption for all 12mos: {peak_all}')\n",
+    "    peak_consumption = int(extract_text(text, 'Peak Capacity Charge ', '\\n\\n').split('\\n')[0].split()[0])\n",
+    "    print(f'Actual Peak Consumption: \\t{peak_consumption}')\n",
+    "    peak_rate = float(extract_text(text, 'Peak Capacity Charge ', '\\n\\n').split('\\n')[0].split()[3][1:])\n",
+    "    print(f'Peak Rate: \\t\\t\\t{peak_rate}')\n",
+    "    peak_chg_all = peak_rate * peak_all\n",
+    "    print(f'Peak Charge for all 12mos: \\t{peak_chg_all}')\n",
+    "    peak_chg_actual = peak_rate * peak_consumption\n",
+    "    print(f'Actual Peak Charge: \\t\\t{peak_chg_actual}')\n",
+    "    fuel_rate = float(extract_text(text, 'Fuel Adjustment', '\\n').split()[-1][1:])\n",
+    "    print(f'Fuel Rate: \\t\\t\\t{fuel_rate}')\n",
+    "    fuel_chg = consumption * fuel_rate\n",
+    "    print(f'Fuel Charge: \\t\\t\\t{fuel_chg}')\n",
+    "    regulatory_rate = float(extract_text(text, 'Regulatory Adj', 'Total Electric Bill').split()[-2][1:])\n",
+    "    print(f'Regulatory Rate: \\t\\t{regulatory_rate}')\n",
+    "    regulatory_chg = regulatory_rate * consumption\n",
+    "    print(f'Regulatory Charge: \\t\\t{regulatory_chg}')\n",
+    "    service_availability_chg = float(extract_text(text, 'Residential Electric\\n\\n$', 'Service Availability Charge\\n$'))\n",
+    "    print(f'Service Availability Charge: \\t{service_availability_chg}')\n",
+    "    \n",
+    "    total_bill = service_availability_chg + consumption_chg + peak_chg_actual + fuel_chg + regulatory_chg\n",
+    "    print(f'Total Bill: \\t\\t\\t{total_bill}')\n",
     "    \n",
     "    print()"
    ]
@@ -644,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf1746e1",
+   "id": "a38cdc2c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -652,12 +701,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9fd54dc",
+   "id": "20cd4109",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -715,19 +762,19 @@
     "### Charges\n",
     "Charge Detail | Label | Description\n",
     ":-- | :-- | :--\n",
-    "*Service Availablity Charge | `service_charge` | *float*, Covers the cost of metering and billing for your address, regardless of consumption\n",
+    "✅ *Service Availablity Charge | `service_charge` | *float*, Covers the cost of metering and billing for your address, regardless of consumption\n",
     "✅ Energy Consumption | `consumption` | kWh Used\n",
-    "Base rate | `consumption_rate` | *float*, per kWh charge for consumption\n",
-    "Energy Charge | `consumption_charge` | *float*, Recovers costs for power plants and other infrastructure based on the amount of electricity you use, `consumption` * `consumption_rate`\n",
-    "*Peak Consumption | `peak` | *float*, kWh used in excess of 600\n",
+    "✅ Base rate | `consumption_rate` | *float*, per kWh charge for consumption\n",
+    "✅ Energy Charge | `consumption_charge` | *float*, Recovers costs for power plants and other infrastructure based on the amount of electricity you use, `consumption` * `consumption_rate`\n",
+    "✅ *Peak Consumption | `peak` | *float*, kWh used in excess of 600\n",
     "✅ Peak Consumption - All Months | `peak_all`| *float*, kWh used in excess of 600 for all months \n",
-    "Peak Consumption Rate | `peak_rate` | *float*, per kWh charge for peak consumption\n",
-    "Peak Consumption Charge | `peak_charge` | *float*, The Peak Capacity Charge covers the higher costs for electricity CPS Energy incurs during summer months when demand for electricity is at its highest\n",
-    "*Fuel Adjustment Rate | `fuel_rate` | *float*, The cost for fuel above the base rate. \n",
-    "Fuel Adjustment Charge | `fuel_charge` | *float*, `fuel_rate` * `consumption`, The fuel adjustment covers the difference between the base rate customers are charged for natural gas use and how much it actually costs to get and deliver that gas. This charge fluctuates with the market price of natural gas.\n",
-    "Regualtory Adjustment Rate | `regulatory_rate` | *float*, This covers two costs — the cost of statewide transmission and the cost CPS Energy pays to be a part of the Electric Reliability Council of Texas (ERCOT).\n",
-    "Regulatory Adjustment Charge | `regulatory_charge` | *float*, `regulatory_rate` * `consumption` \n",
-    "Total Bill Amount | `total_bill` | *float*, (1) `service_charge` + (2) `consumption_charge` + (3) `peak_charge` + (4) `fuel_charge` + (5) `regulatory_charge`"
+    "✅ Peak Consumption Rate | `peak_rate` | *float*, per kWh charge for peak consumption\n",
+    "✅ Peak Consumption Charge | `peak_charge` | *float*, The Peak Capacity Charge covers the higher costs for electricity CPS Energy incurs during summer months when demand for electricity is at its highest\n",
+    "✅ *Fuel Adjustment Rate | `fuel_rate` | *float*, The cost for fuel above the base rate. \n",
+    "✅ Fuel Adjustment Charge | `fuel_charge` | *float*, `fuel_rate` * `consumption`, The fuel adjustment covers the difference between the base rate customers are charged for natural gas use and how much it actually costs to get and deliver that gas. This charge fluctuates with the market price of natural gas.\n",
+    "✅ Regualtory Adjustment Rate | `regulatory_rate` | *float*, This covers two costs — the cost of statewide transmission and the cost CPS Energy pays to be a part of the Electric Reliability Council of Texas (ERCOT).\n",
+    "✅ Regulatory Adjustment Charge | `regulatory_charge` | *float*, `regulatory_rate` * `consumption` \n",
+    "✅ Total Bill Amount | `total_bill` | *float*, (1) `service_charge` + (2) `consumption_charge` + (3) `peak_charge` + (4) `fuel_charge` + (5) `regulatory_charge`"
    ]
   },
   {
