adding final functions

--- a/03_function_builder.ipynb
+++ b/03_function_builder.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "id": "d93c57e3",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "60a9b84f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "a52a6e8e",
    "metadata": {},
    "outputs": [
@@ -86,12 +86,12 @@
       "22-08-25\n",
       "August\n",
       "Aug 25, 2022\n",
-      "22-08-25\n",
+      "2022-08-25\n",
       "\n",
       "22-09-27\n",
       "September\n",
       "Sep 27, 2022\n",
-      "22-09-27\n",
+      "2022-09-27\n",
       "\n"
      ]
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1e39253e",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "90c44374",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c0b8dd9b",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fc4d5db5",
    "metadata": {
     "scrolled": true
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "edd1c821",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b7e82135",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "22070aab",
    "metadata": {
     "scrolled": true
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a0e9cc09",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0c53d5a7",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "id": "56a27a71",
    "metadata": {},
    "outputs": [],
@@ -294,10 +294,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "id": "042b2bfe",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-10-05 21:01:58,822 [MainThread  ] [INFO ]  Retrieving http://search.maven.org/remotecontent?filepath=org/apache/tika/tika-server/1.24/tika-server-1.24.jar to /var/folders/g5/8c1v6h3d6mn9cky4jsf214bh0000gn/T/tika-server.jar.\n",
+      "2022-10-05 21:02:02,508 [MainThread  ] [INFO ]  Retrieving http://search.maven.org/remotecontent?filepath=org/apache/tika/tika-server/1.24/tika-server-1.24.jar.md5 to /var/folders/g5/8c1v6h3d6mn9cky4jsf214bh0000gn/T/tika-server.jar.md5.\n",
+      "2022-10-05 21:02:02,971 [MainThread  ] [WARNI]  Failed to see startup log message; retrying...\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -352,7 +361,7 @@
        "1  2022-09-27  \\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n..."
       ]
      },
-     "execution_count": 70,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "id": "27f32d7a",
    "metadata": {},
    "outputs": [],
@@ -395,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
    "id": "6c7f9d41",
    "metadata": {},
    "outputs": [
@@ -405,7 +414,7 @@
        "'08/25/22'"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "id": "1bcf42d1",
    "metadata": {},
    "outputs": [
@@ -469,7 +478,7 @@
        "Name: text, dtype: object"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 20,
    "id": "c80103ef",
    "metadata": {
     "scrolled": true
@@ -494,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 21,
    "id": "dd2f3073",
    "metadata": {
     "scrolled": false
@@ -547,17 +556,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 22,
    "id": "93f5de45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Jul 26, 2022 ', ' Aug 23, 2022']"
+       "['Aug 24, 2022 ', ' Sep 23, 2022']"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,8 +576,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0c9b7173",
+   "metadata": {},
+   "source": [
+    "### Charges\n",
+    "Charge Detail | Label | Description\n",
+    ":-- | :-- | :--\n",
+    "✅ *Service Availablity Charge | `service_charge` | *float*, Covers the cost of metering and billing for your address, regardless of consumption\n",
+    "✅ Energy Consumption | `consumption` | kWh Used\n",
+    "✅ Base rate | `consumption_rate` | *float*, per kWh charge for consumption\n",
+    "✅ Energy Charge | `consumption_charge` | *float*, Recovers costs for power plants and other infrastructure based on the amount of electricity you use, `consumption` * `consumption_rate`\n",
+    "✅ *Peak Consumption | `peak` | *float*, kWh used in excess of 600\n",
+    "✅ Peak Consumption - All Months | `peak_all`| *float*, kWh used in excess of 600 for all months \n",
+    "✅ Peak Consumption Rate | `peak_rate` | *float*, per kWh charge for peak consumption\n",
+    "✅ Peak Consumption Charge | `peak_charge` | *float*, The Peak Capacity Charge covers the higher costs for electricity CPS Energy incurs during summer months when demand for electricity is at its highest\n",
+    "✅ *Fuel Adjustment Rate | `fuel_rate` | *float*, The cost for fuel above the base rate. \n",
+    "✅ Fuel Adjustment Charge | `fuel_charge` | *float*, `fuel_rate` * `consumption`, The fuel adjustment covers the difference between the base rate customers are charged for natural gas use and how much it actually costs to get and deliver that gas. This charge fluctuates with the market price of natural gas.\n",
+    "✅ Regualtory Adjustment Rate | `regulatory_rate` | *float*, This covers two costs — the cost of statewide transmission and the cost CPS Energy pays to be a part of the Electric Reliability Council of Texas (ERCOT).\n",
+    "✅ Regulatory Adjustment Charge | `regulatory_charge` | *float*, `regulatory_rate` * `consumption` \n",
+    "✅ Total Bill Amount | `total_bill` | *float*, (1) `service_charge` + (2) `consumption_charge` + (3) `peak_charge` + (4) `fuel_charge` + (5) `regulatory_charge`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 23,
    "id": "51c9e4a9",
    "metadata": {},
    "outputs": [
@@ -693,10 +725,115 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a38cdc2c",
+   "id": "2a030c4f",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47f7fd14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a38cdc2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_bill_data(df):\n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
+    "    # initalizing empty lists to store values from loop for df\n",
+    "    bills_starts = []\n",
+    "    bills_ends = []\n",
+    "    bill_periods = []\n",
+    "    \n",
+    "    meters = []\n",
+    "    consumptions = []\n",
+    "    peaks = []\n",
+    "    peak_alls = []\n",
+    "    \n",
+    "    consumption_rates = []\n",
+    "    peak_rates = []\n",
+    "    fuel_rates = []\n",
+    "    regulatory_rates = []\n",
+    "    \n",
+    "    service_charges = []\n",
+    "    consumption_charges = []\n",
+    "    peak_charges = []\n",
+    "    fuel_charges = []\n",
+    "    regulatory_charges = []\n",
+    "    total_bills = []\n",
+    "    \n",
+    "    # looping through each bill\n",
+    "    for text in df.text:\n",
+    "    \n",
+    "        #################\n",
+    "        # BILLING INFO\n",
+    "        #################\n",
+    "        billing_data = extract_text(text, 'Billing Period ', '\\nYour next')\n",
+    "        \n",
+    "        bill_start = arrow.get(date_data.split('-')[0].strip(), 'MMM DD, YYYY').format('YYYY-MM-DD')\n",
+    "        bills_starts.append(bill_start)\n",
+    "        \n",
+    "        \n",
+    "        bills_ends.append()\n",
+    "        \n",
+    "        \n",
+    "        bill_periods.append()\n",
+    "        \n",
+    "\n",
+    "        #################\n",
+    "        # BASE AMOUNTS\n",
+    "        #################\n",
+    "        \n",
+    "        meters.append()\n",
+    "        \n",
+    "        consumptions.append()\n",
+    "        \n",
+    "        peaks.append()\n",
+    "        \n",
+    "        peak_alls.append()\n",
+    "\n",
+    "        #################\n",
+    "        # RATES\n",
+    "        #################\n",
+    "        \n",
+    "        consumption_rates.append()\n",
+    "        \n",
+    "        peak_rates.append()\n",
+    "        \n",
+    "        fuel_rates.append()\n",
+    "        \n",
+    "        regulatory_rates.append()\n",
+    "\n",
+    "        #################\n",
+    "        # CHARGES\n",
+    "        #################\n",
+    "        \n",
+    "        service_charges.append()\n",
+    "        \n",
+    "        consumption_charges.append()\n",
+    "        \n",
+    "        peak_charges.append()\n",
+    "        \n",
+    "        fuel_charges.append()\n",
+    "        \n",
+    "        regulatory_charges.append()\n",
+    "        \n",
+    "        total_bills.append()\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
@@ -753,29 +890,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0c9b7173",
-   "metadata": {},
-   "source": [
-    "### Charges\n",
-    "Charge Detail | Label | Description\n",
-    ":-- | :-- | :--\n",
-    "✅ *Service Availablity Charge | `service_charge` | *float*, Covers the cost of metering and billing for your address, regardless of consumption\n",
-    "✅ Energy Consumption | `consumption` | kWh Used\n",
-    "✅ Base rate | `consumption_rate` | *float*, per kWh charge for consumption\n",
-    "✅ Energy Charge | `consumption_charge` | *float*, Recovers costs for power plants and other infrastructure based on the amount of electricity you use, `consumption` * `consumption_rate`\n",
-    "✅ *Peak Consumption | `peak` | *float*, kWh used in excess of 600\n",
-    "✅ Peak Consumption - All Months | `peak_all`| *float*, kWh used in excess of 600 for all months \n",
-    "✅ Peak Consumption Rate | `peak_rate` | *float*, per kWh charge for peak consumption\n",
-    "✅ Peak Consumption Charge | `peak_charge` | *float*, The Peak Capacity Charge covers the higher costs for electricity CPS Energy incurs during summer months when demand for electricity is at its highest\n",
-    "✅ *Fuel Adjustment Rate | `fuel_rate` | *float*, The cost for fuel above the base rate. \n",
-    "✅ Fuel Adjustment Charge | `fuel_charge` | *float*, `fuel_rate` * `consumption`, The fuel adjustment covers the difference between the base rate customers are charged for natural gas use and how much it actually costs to get and deliver that gas. This charge fluctuates with the market price of natural gas.\n",
-    "✅ Regualtory Adjustment Rate | `regulatory_rate` | *float*, This covers two costs — the cost of statewide transmission and the cost CPS Energy pays to be a part of the Electric Reliability Council of Texas (ERCOT).\n",
-    "✅ Regulatory Adjustment Charge | `regulatory_charge` | *float*, `regulatory_rate` * `consumption` \n",
-    "✅ Total Bill Amount | `total_bill` | *float*, (1) `service_charge` + (2) `consumption_charge` + (3) `peak_charge` + (4) `fuel_charge` + (5) `regulatory_charge`"
-   ]
   },
   {
    "cell_type": "code",
